I Just Completed My Seventh CSS Assignment

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <div class="cont"></div>
             <div class="image"><img src="./img/image.png" alt=""></div>
             <div class="cont2">
-                <p>Victor Crest 26</p>
-                <p>London</p>
+                <p>Victor Crest <span>26</span></p>
+                <h3>London</h3>
             </div>
             <footer>
                     
